syntax = "proto2";

package paxospb;


import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_enum_prefix_all) = false;

enum MessageType {
    LocalTick = 0;
	PaxosPrepare = 1;
	PaxosPrepareReply = 2;
	PaxosAccept = 3;
	PaxosAcceptReply = 4;
}

message PaxosMsg{
    optional MessageType MsgType = 1 [(gogoproto.nullable) = false];
    optional uint64 To = 2 [(gogoproto.nullable) = false];
    optional uint64 From = 3 [(gogoproto.nullable) = false];
    optional uint64 Group_id = 4 [(gogoproto.nullable) = false];
	optional uint64 InstanceID = 5 [(gogoproto.nullable) = false];
	optional uint64 NodeID = 6 [(gogoproto.nullable) = false];
	optional uint64 ProposalID = 7 [(gogoproto.nullable) = false];
	optional uint64 ProposalNodeID = 8 [(gogoproto.nullable) = false];
	optional bytes Value = 9;
	optional uint64 PreAcceptID = 10 [(gogoproto.nullable) = false];
	optional uint64 PreAcceptNodeID = 11 [(gogoproto.nullable) = false];
	optional uint64 RejectByPromiseID = 12 [(gogoproto.nullable) = false];
	optional uint64 NowInstanceID = 13 [(gogoproto.nullable) = false];
	optional uint64 MinChosenInstanceID = 14 [(gogoproto.nullable) = false];
	optional uint32 Flag = 17 [(gogoproto.nullable) = false];
	optional bytes MasterVariables = 19;
}

message MessageBatch{
	repeated PaxosMsg requests = 1 [(gogoproto.nullable) = false];
	optional string source_address = 2 [(gogoproto.nullable) = false];
	optional uint32 bin_ver = 3 [(gogoproto.nullable) = false];
}

enum EntryType{
	ApplicationEntry = 0;
	ConfigChangeEntry = 1;
}

message Entry{
	optional uint64 InstanceID = 1 [(gogoproto.nullable) = false];
	optional EntryType Type = 2 [(gogoproto.nullable) = false];
	optional string Cmd = 3 [(gogoproto.nullable) = false];
}

message EntryBatch{
	repeated Entry entries          = 1 [(gogoproto.nullable) = false];
}

message BallotNumber{
    optional uint64 ProposalID  = 1 [(gogoproto.nullable) = false];
    optional uint64 NodeID      = 2 [(gogoproto.nullable) = false];
}

message AcceptorState{
    optional uint64       InstanceID        = 1 [(gogoproto.nullable) = false];
    optional BallotNumber PromiseBallot     = 2 [(gogoproto.nullable) = false];
    optional BallotNumber AcceptedBallot    = 3 [(gogoproto.nullable) = false];
    optional string       AccetpedValue     = 4 [(gogoproto.nullable) = false];
}

message MasterVariables{
    required uint64 MasterNodeID = 1;
    required uint64 Version = 2;
    required uint32 LeaseTime = 3;
}

message PaxosNodeInfo
{
	required uint64 Rid = 1;
	required uint64 NodeID = 2;
};


message SystemVariables
{
	required uint64 Gid = 1;
	repeated PaxosNodeInfo MemberShip = 2;
	required uint64 Version = 3;
};
